<resources>
    <string name="app_name">CS125_UIUCGPA</string>
    <string name="gpa_average_calculator">Find Average GPA</string>
    <string name="gpa_calculator">Calculate GPA</string>
    <string name="cs_125">CS125</string>
    <string name="gpa_average_calculator_header1">Course</string>
    <string name="gpa_average_calculator_header2">Letter Grade</string>
    <string name="gpa_average_calculator_header3">GPA</string>
    <string name="app_title">UIUC GPA Predictor</string>
    <string name="example_course_name"> </string>
    <string name="example_course_grade">A</string>
    <string name="example_course_gpa">4.00</string>
</resources>
